// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`property test_property_not_templated 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_not_templated 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`property test_property_not_templated_invalid 1`] = `
Object {
  "json": Object {
    "property": Object {
      "url": "",
    },
    "type": "entity_with_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_not_templated_invalid 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`property test_property_template_unknown_type 1`] = `
Object {
  "json": Object {
    "link": "Some text",
    "property": "Some text",
    "type": "t_0",
  },
  "templateContext": Object {
    "link": "Some text",
  },
}
`;

exports[`property test_property_unknown_type 1`] = `
Object {
  "json": Object {
    "link": "Some text",
    "type": "t_0",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_unknown_type 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`property test_property_with_link 1`] = `
Object {
  "json": Object {
    "link": "Some text",
    "property": "Some text",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {
    "link": "Some text",
  },
}
`;

exports[`property test_property_with_link_invalid 1`] = `
Object {
  "json": Object {
    "link": "",
    "property": "",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {
    "link": "",
  },
}
`;

exports[`property test_property_with_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_required_property",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_with_link_missing_data 2`] = `Array []`;

exports[`property test_property_with_override 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {
    "property": "Some text",
  },
}
`;

exports[`property test_property_with_override 2`] = `Array []`;

exports[`property test_property_with_override_in_template 1`] = `
Object {
  "json": Object {
    "link_override": "Some text",
    "property": "Some text",
    "type": "t_0",
  },
  "templateContext": Object {
    "link_override": "Some text",
  },
}
`;

exports[`property test_property_without_link 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_without_link_invalid 1`] = `
Object {
  "json": Object {
    "property": "",
    "type": "entity_with_required_property",
  },
  "templateContext": Object {},
}
`;

exports[`property test_property_without_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_required_property",
  },
  "templateContext": Object {},
}
`;
